--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
     <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
     <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
+    <string name="this_is_nasa_s_picture_of_day_but_something_went_wrong_while_fetching">This is NASA\'s picture of day, but something went wrong while fetching</string>
     <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
 </resources>
