--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -15,9 +15,12 @@
     <string name="image_of_the_day">Image of the Day</string>
     <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
     <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
+    <string name="potentially_hazardous_asteroid_status_icon">Potentially hazardous asteroid status icon</string>
+    <string name="not_hazardous_asteroid_status_icon">Not hazardous asteroid status icon</string>
     <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
     <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
     <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
     <string name="this_is_nasa_s_picture_of_day_but_something_went_wrong_while_fetching">This is NASA\'s picture of day, but something went wrong while fetching</string>
     <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
+    <string name="click_here_to_get_more_information_about_the_astronomical_unit">Click here to get more information about the astronomical unit.</string>
 </resources>
